--- a/app/src/main/res/layout/activity_gif.xml
+++ b/app/src/main/res/layout/activity_gif.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.mcondle.giffy.ui.GifListActivity">
+    tools:context="com.mcondle.giffy.view.GifActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,20 +21,31 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_gif_list" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:indeterminate="true" />
-
-    <include layout="@layout/fab_menu"
-        android:id="@+id/fab"
+    <RelativeLayout
+        android:id="@+id/content_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="bottom|end" />
+        android:layout_marginTop="?attr/actionBarSize">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/nav_view" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            android:indeterminate="true" />
+
+        <include
+            android:id="@id/nav_view"
+            layout="@layout/bottom_nav_view" />
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
