--- a/app/src/main/res/layout/content_gif_grid.xml
+++ b/app/src/main/res/layout/content_gif_grid.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main"
+    android:id="@+id/content_gif_grid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,13 +10,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.mcondle.giffy.ui.GifListActivity"
-    tools:showIn="@layout/activity_gif_list"
+    tools:context="com.mcondle.giffy.view.GifActivity"
     android:background="@android:color/darker_gray">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/gif_list_view"
+        android:id="@+id/gif_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
+    <include layout="@layout/fab_menu_gif"
+        android:id="@+id/fab_gif"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end" />
 
 </RelativeLayout>
