--- a/app/src/main/res/layout/sticker_view.xml
+++ b/app/src/main/res/layout/sticker_view.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:gravity="center_horizontal"
     android:layout_margin="@dimen/gif_image_margin">
 
     <ImageView
-        android:id="@+id/gif_img_view"
+        android:id="@+id/sticker_img_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true" />
