--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,9 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">8dp</dimen>
-    <dimen name="activity_vertical_margin">8dp</dimen>
+    <dimen name="activity_horizontal_margin">4dp</dimen>
+    <dimen name="activity_vertical_margin">4dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="gif_image_horizontal_margin">4dp</dimen>
-    <dimen name="gif_image_top_margin">4dp</dimen>
+    <!--<dimen name="gif_image_horizontal_margin">4dp</dimen>-->
+    <dimen name="gif_image_margin">4dp</dimen>
 </resources>
